--- a/_posts/2016-02-17-week-0.markdown
+++ b/_posts/2016-02-17-week-0.markdown
@@ -6,6 +6,6 @@ post_author: Nick
 categories: jekyll update
 comments: true
 ---
-<iframe src="https://player.vimeo.com/video/155725357?byline=0&portrait=0"
-width="700" height="393" frameborder="0" webkitallowfullscreen
-mozallowfullscreen allowfullscreen></iframe>
+<iframe src="https://player.vimeo.com/video/155725357?portrait=0" width="650"
+height="366" frameborder="0" webkitallowfullscreen mozallowfullscreen
+allowfullscreen></iframe>
